--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%- include('head', {title: 'Movie Database v2.0 - index'}); %>
+    <%- include('head', {title: 'Movie Database - Movie Database v2.0 - index'}); %>
   </head>
 
   <body>
